Clean up and improvements

--- a/Week1/web/index.html
+++ b/Week1/web/index.html
@@ -21,6 +21,9 @@
 	<main>
 		<h2>#10WeeksOfCloudOps! week1</h2>
 		<p>This is a simple static site built for the #10weeksofcloudops challenge.</p>
+		<p>Below is the architecture diagram</p>
+		<img src="../Architecturediagram.png" alt="Archtecture diagram " class="image">
+		<a href="https://github.com/MMuyideen/AzureCloudopsChallenge/tree/master/Week1">Github Repo</a>
 	</main>
 	
 	<footer>
